Fixed some layout issues

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -3,6 +3,7 @@
   background-color: #444545;
   min-height: 250px;
   color: #fff;
+  padding: 1rem 0;
 }
 .footer__container {
   align-items: center;
