--- a/src/components/home/banner/Banner.css
+++ b/src/components/home/banner/Banner.css
@@ -49,13 +49,18 @@
 }
 
 @media (max-width: 700px) {
+  .banner-container {
+    width: 100%;
+    height: 400px;
+  }
+
   .banner-container .banner {
     padding: 1rem;
     width: 95%;
   }
 
   .banner-container h1 {
-    font-size: 2.2em;
+    font-size: 1.8em;
   }
 
   .quotes {
